@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>OpenFlights Help: Database</title>
+    <title>OpenFlights Help: Databases</title>
     <link rel="stylesheet" href="/css/style_reset.css" type="text/css">
     <link rel="stylesheet" href="/openflights.css" type="text/css">
   </head>
@@ -16,11 +16,13 @@
       <ul>
 	<li><b>OpenFlights</b> is the default database, created by merging GAD and DAFIF and manually correcting countless errors.  <i>Only airports found in OpenFlights searches can be used to enter your flights.</i>
 
-	<li><b>DAFIF</b> is the October 2006 cycle of the Digital Aeronautical Flight Information File managed by the United States <a href="http://www.nga.mil/">National Geospatial-Intelligence Agency</a>.  The accuracy of DAFIF data is very high, but it does not include city names or IATA codes.  (However, it does include FAA codes for US airports.)  Unfortunately, DAFIF data after October 2006 is no longer available to the public.  Data from DAFIF can be preloaded into the search form for easy adding to the OpenFlights DB.
-	  
-	<li><b>Global Airport Database</b> (v0.0.1) is a public domain database by <a href="http://www.partow.net/miscellaneous/airportdatabase/">Arash Partow</a>.  It contains city names and IATA codes, but is woefully out of date, with many entries in wrong/obsolete countries, obsolete ICAO codes and lat/lon information missing for many cities.
+	<li><b>DAFIF</b> is the October 2006 cycle of the Digital Aeronautical Flight Information File managed by the United States <a href="http://www.nga.mil/">National Geospatial-Intelligence Agency</a>.  The accuracy of DAFIF data is very high, but it does not include city names or IATA codes.  (However, it does include FAA codes for US airports.)  Unfortunately, DAFIF data after October 2006 is no longer available to the public.
+
+	<li><b>Global Airport Database</b> (v0.0.1) or GAD is a public domain database by <a href="http://www.partow.net/miscellaneous/airportdatabase/">Arash Partow</a>.  Unlike DAFIF, it contains city names and IATA codes, but much of its information is woefully out of date, with many entries in wrong/obsolete countries, obsolete ICAO codes and lat/lon information missing for many cities.
       </ul>
 
+      <p>Data from DAFIF and GAD can be preloaded into the search form for easy adding to the OpenFlights DB.</p>
+	  
       <p>If you happen to know of a great free source of airport data, please <a href="/contact.html">contact</a> the OpenFlights team and let us know!</p>
 
       <FORM>
